; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iscsi/extr_iscsi.c_iscsi_session_reconnect.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iscsi/extr_iscsi.c_iscsi_session_reconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iscsi_session = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iscsi_session*)* @iscsi_session_reconnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iscsi_session_reconnect(%struct.iscsi_session* %0) #0 {
  %2 = alloca %struct.iscsi_session*, align 8
  store %struct.iscsi_session* %0, %struct.iscsi_session** %2, align 8
  %3 = load %struct.iscsi_session*, %struct.iscsi_session** %2, align 8
  %4 = getelementptr inbounds %struct.iscsi_session, %struct.iscsi_session* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %14

8:                                                ; preds = %1
  %9 = load %struct.iscsi_session*, %struct.iscsi_session** %2, align 8
  %10 = getelementptr inbounds %struct.iscsi_session, %struct.iscsi_session* %9, i32 0, i32 0
  store i32 1, i32* %10, align 4
  %11 = load %struct.iscsi_session*, %struct.iscsi_session** %2, align 8
  %12 = getelementptr inbounds %struct.iscsi_session, %struct.iscsi_session* %11, i32 0, i32 1
  %13 = call i32 @cv_signal(i32* %12)
  br label %14

14:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @cv_signal(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
